--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   smooth_page_indicator: ^0.1.5
   flushbar: ^1.10.4
   flutter_spinkit: ^4.1.2+1
+  flutter_svg: ^0.17.4
 
 
   # The following adds the Cupertino Icons font to your application.
