--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   flushbar: ^1.10.4
   flutter_spinkit: ^4.1.2+1
   flutter_svg: ^0.17.4
+  material_design_icons_flutter: ^4.0.5345
+  pie_chart: ^3.1.1
+  
 
 
   # The following adds the Cupertino Icons font to your application.
