--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_svg: ^0.17.4
   material_design_icons_flutter: ^4.0.5345
   pie_chart: ^3.1.1
+  image_picker: ^0.6.4
+  datetime_picker_formfield: ^1.0.0
   
 
 
