--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_bloc: ^6.0.0
   equatable: ^1.2.0
   firebase_auth: ^0.16.1
+  firebase_storage: ^3.1.5
   email_validator: ^1.0.4
   cloud_firestore: ^0.13.7
   intl: ^0.16.1
@@ -40,6 +41,10 @@ dependencies:
   pie_chart: ^3.1.1
   image_picker: ^0.6.4
   datetime_picker_formfield: ^1.0.0
+  http: ^0.12.2
+  shimmer: ^1.1.1
+  url_launcher: ^5.5.2
+  cached_network_image: ^2.2.0
 
   
 
