--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cached_network_image: ^2.2.0
   flutter_webview_plugin: ^0.3.11
   random_string: ^2.1.0
+  qr_flutter: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
